--- a/ESE577_chatbot_new/adapter_config.json
+++ b/ESE577_chatbot_new/adapter_config.json
@@ -1,9 +1,6 @@
 {
   "alpha_pattern": {},
-  "auto_mapping": {
-    "base_model_class": "MistralForCausalLM",
-    "parent_library": "transformers.models.mistral.modeling_mistral"
-  },
+  "auto_mapping": null,
   "base_model_name_or_path": "mistralai/Mistral-7B-Instruct-v0.2",
   "bias": "none",
   "fan_in_fan_out": false,
@@ -13,20 +10,20 @@
   "layers_pattern": null,
   "layers_to_transform": null,
   "loftq_config": {},
-  "lora_alpha": 32,
-  "lora_dropout": 0.1,
+  "lora_alpha": 16,
+  "lora_dropout": 0.2,
   "megatron_config": null,
   "megatron_core": "megatron.core",
   "modules_to_save": null,
   "peft_type": "LORA",
-  "r": 8,
+  "r": 4,
   "rank_pattern": {},
   "revision": null,
   "target_modules": [
     "q_proj",
     "v_proj"
   ],
-  "task_type": null,
+  "task_type": "CAUSAL_LM",
   "use_dora": false,
   "use_rslora": false
 }
